--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -6,6 +6,21 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+body {
+  margin: 0;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+main {
+  display: block;
+  flex: 1 0 auto;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .fondo {
   width: 100%;
   height: 100%;
@@ -37,14 +52,15 @@
   width: 78px;
 }
 .footer {
-  background-color: #1d1b31;
-  color: #fff;
+  padding: 40px;
+  height: 20px;
+  background-color: #f8f8f8;
+  color: #1d1b31;
   text-align: center;
 }
-.footer img{
-  margin-left: 6rem;
-  height: 70px;
-  width: 100px;
+.footer span{
+font-family: 'Poppins';
+font-size: 12px;
 }
 .sidebar .nav-links{
   height: 100%;
