--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -56,7 +56,7 @@ main {
   height: 20px;
   background-color: #f8f8f8;
   color: #1d1b31;
-  text-align: center;
+  text-align: right;
 }
 .footer span{
 font-family: 'Poppins';
