--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -1,18 +1,327 @@
 /* Google Fonts Import Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@keyframes swing {
+  0%,
+  30%,
+  50%,
+  70%,
+  100% {
+    transform: rotate(0deg); }
+  10% {
+    transform: rotate(10deg); }
+  40% {
+    transform: rotate(-10deg); }
+  60% {
+    transform: rotate(5deg); }
+  80% {
+    transform: rotate(-5deg); } }
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-body {
-  margin: 0;
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
+.pro-sidebar {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #1d1d1d; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  .pro-sidebar > .pro-sidebar-inner {
+    background: #1d1d1d;
+    height: 100%;
+    position: relative;
+    }
+    .pro-sidebar > .pro-sidebar-inner > img.sidebar-bg {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      position: absolute;
+      opacity: 0.3;
+      left: 0;
+      top: 0;
+      }
+    .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout {
+      height: 100%;
+      overflow-y: auto;
+      overflow-x: hidden;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      }
+      .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-header {
+        border-bottom: 1px solid rgba(173, 173, 173, 0.2); }
+      .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-content {
+        flex-grow: 1; }
+      .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-footer {
+        border-top: 1px solid rgba(173, 173, 173, 0.2); }
+        .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-footer img {
+          width: 60px;
+        }
+      .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0; }
+  .pro-sidebar .overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none; }
+  .pro-sidebar.collapsed {
+    width: 280px;
+    min-width: 280px; }
+.pro-sidebar .pro-menu.submenu-bullets .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item:before {
+  content: '';
+  display: inline-block;
+  width: 4px;
+  min-width: 4px;
+  height: 4px;
+  border: 1px solid #2b2b2b;
+  border-radius: 50%;
+  margin-right: 15px;
+  position: relative;
+  box-shadow: 1px 0px 0px #adadad, 0px -1px 0px #adadad, 0px 1px 0px #adadad, -1px 0px 0px #adadad; }
+
+.pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-item-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
+.pro-sidebar .pro-menu {
+  padding-top: 10px;
+  padding-bottom: 10px; }
+  .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item {
+    position: relative;
+    background-color: #2b2b2b; }
+    .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul {
+      padding-top: 15px;
+      padding-bottom: 15px; }
+  .pro-sidebar .pro-menu a {
+    text-decoration: none;
+    color: #adadad; }
+    .pro-sidebar .pro-menu a:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: transparent; }
+    .pro-sidebar .pro-menu a:hover {
+      color: #d8d8d8; }
+  .pro-sidebar .pro-menu .pro-menu-item {
+    font-size: 15px; }
+    .pro-sidebar .pro-menu .pro-menu-item.active {
+      color: #d8d8d8; }
+    .pro-sidebar .pro-menu .pro-menu-item .suffix-wrapper {
+      opacity: 1;
+      transition: opacity 0.2s; }
+    .pro-sidebar .pro-menu .pro-menu-item .prefix-wrapper {
+      display: flex;
+      margin-right: 5px;
+      opacity: 1;
+      transition: opacity 0.2s; }
+    .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item {
+      position: relative;
+      display: flex;
+      align-items: center;
+      padding: 8px 35px 8px 20px;
+      cursor: pointer; }
+      .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:focus {
+        outline: none;
+        color: #d8d8d8; }
+      .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
+        margin-right: 10px;
+        font-size: 14px;
+        width: 35px;
+        min-width: 35px;
+        height: 35px;
+        line-height: 35px;
+        text-align: center;
+        display: inline-block; }
+        .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper .pro-icon {
+          display: flex;
+          height: 100%;
+          align-items: center;
+          justify-content: center; }
+      .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-item-content {
+        flex-grow: 1;
+        flex-shrink: 1; }
+      .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover {
+        color: #d8d8d8; }
+        .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover .pro-icon-wrapper .pro-icon {
+          animation: swing ease-in-out 0.5s 1 alternate; }
+    .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item:before {
+      background: #adadad; }
+    .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper {
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      transform: translateY(-50%); }
+      .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
+        display: inline-block;
+        border-style: solid;
+        border-color: #adadad;
+        border-width: 0 2px 2px 0;
+        padding: 2.5px;
+        vertical-align: middle;
+        transition: transform 0.3s;
+        transform: rotate(-45deg); }
+    .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu.open > .pro-inner-item:before {
+      background: transparent !important; }
+    .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu.open > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
+      transform: rotate(45deg); }
+    .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item {
+      padding-left: 24px; }
+      .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
+        padding: 8px 30px 8px 15px; }
+        .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item > .pro-icon-wrapper {
+          background: none;
+          width: auto;
+          min-width: auto;
+          height: auto;
+          line-height: auto; }
+  .pro-sidebar .pro-menu:not(.inner-submenu-arrows) .pro-inner-list-item .pro-menu-item.pro-sub-menu .pro-inner-item .pro-arrow-wrapper {
+    display: none; }
+  .pro-sidebar .pro-menu.shaped .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
+    background-color: #2b2b2b; }
+  .pro-sidebar .pro-menu.square .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
+    border-radius: 0; }
+  .pro-sidebar .pro-menu.round .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
+    border-radius: 4px; }
+  .pro-sidebar .pro-menu.circle .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
+    border-radius: 50%; }
+
+.pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item {
+  position: relative; }
+  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item > .pro-inner-item > .suffix-wrapper,
+  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item > .pro-inner-item > .prefix-wrapper {
+    opacity: 0; }
+  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item > .pro-inner-list-item {
+    background-color: #2b2b2b;
+    z-index: 111; }
+  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item::before {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    cursor: pointer; }
+  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu {
+    position: relative; }
+    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-item {
+      pointer-events: none; }
+      .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper {
+        display: none; }
+    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item {
+      height: auto !important;
+      position: fixed;
+      visibility: hidden;
+      min-width: 220px;
+      max-width: 270px;
+      background-color: transparent;
+      max-height: 100%;
+      padding-left: 3px; }
+      .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item.has-arrow {
+        padding-left: 10px; }
+      .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item > .popper-inner {
+        max-height: 100vh;
+        overflow-y: auto;
+        background-color: #2b2b2b;
+        padding-left: 20px;
+        border-radius: 4px; }
+    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu:hover > .pro-inner-list-item {
+      transition: visibility, transform 0.3s;
+      visibility: visible; }
+    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu:hover .pro-icon-wrapper .pro-icon {
+      animation: swing ease-in-out 0.5s 1 alternate; }
+    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-sub-menu-item,
+    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
+      padding: 8px 30px 8px 5px; }
+
+.pro-sidebar.rtl .pro-menu .pro-menu-item .prefix-wrapper {
+  margin-right: 0;
+  margin-left: 5px; }
+
+.pro-sidebar.rtl .pro-menu .pro-menu-item > .pro-inner-item {
+  padding: 8px 20px 8px 35px; }
+  .pro-sidebar.rtl .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
+    margin-right: 0;
+    margin-left: 10px; }
+
+.pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper {
+  right: auto;
+  left: 20px; }
+  .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
+    transform: rotate(135deg); }
+
+.pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu.open > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
+  transform: rotate(45deg); }
+
+.pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item {
+  padding-left: 0;
+  padding-right: 0px; }
+  .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
+    padding: 8px 15px 8px 30px; }
+    .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item:before {
+      margin-right: 0;
+      margin-left: 15px; }
+
+.pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item {
+  padding-left: 0;
+  padding-right: 3px; }
+  .pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item.has-arrow {
+    padding-right: 10px; }
+  .pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item > .popper-inner {
+    padding-left: 0;
+    padding-right: 20px; }
+
+.pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-sub-menu-item,
+.pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
+  padding: 8px 5px 8px 30px; }
+
+.popper-arrow {
+  position: absolute;
+  z-index: -1;
+  width: 0;
+  height: 0;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent; }
+
+.popper-element[data-popper-placement^='left'] > .popper-arrow {
+  right: 0;
+  border-right: 7px solid #2b2b2b; }
+
+.popper-element[data-popper-placement^='right'] > .popper-arrow {
+  left: 0;
+  border-left: 7px solid #2b2b2b; }
+
+.react-slidedown {
+  height: 0;
+  transition-property: none;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out; }
+
+.react-slidedown.transitioning {
+  overflow-y: hidden; }
+
+.react-slidedown.closed {
+  display: none; }
+
 main {
+  margin-top: 30px;
   display: block;
   flex: 1 0 auto;
 }
@@ -25,11 +334,10 @@ main {
   width: 100%;
   height: 100%;
 }
-
 .fondo::after {
   content: "";
-  /* background: url('C:\Users\super\Desktop\Proyectos\telesistemacanal4\client\src\views\images\fondo.jpg') no-repeat center center fixed; */
-  background: url('D:\Proyectos de React\telesistemasrl\client\src\views\images\fondo.jpg') no-repeat center center fixed;
+  background: url('C:\Users\super\Desktop\Proyectos\telesistemacanal4\client\src\views\images\fondo.jpg') no-repeat center center fixed;
+  /* background: url('D:\Proyectos de React\telesistemasrl\client\src\views\images\fondo.jpg') no-repeat center center fixed; */
   top: 0;
   left: 0;
   bottom: 0;
@@ -38,27 +346,36 @@ main {
   z-index: -1;   
 }
 .header{
-  padding: 10px 16px;
-  background: #f8f8f8;
+  padding: 15px 16px;
+  background: #1d1d1d;
+  z-index: 1;
 }
 .header i {
-  margin-left: 85px;
-  color: #11101d;
-  float: right;
+  color: #f1f1f7;
   font-size: 35px;
+  cursor: pointer;
 }
-.sidebar{
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 260px;
-  background: #11101d;
-  z-index: 100;
-  transition: all 0.5s ease;
+@media (max-width: 767px) {
+  main {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 15px;
+  }
+  .header i {
+    margin-left: auto;
+  }
+  .pro-sidebar.collapsed {
+    margin-left: 80px;
+  }
 }
-.sidebar.close{
-  width: 78px;
+@media (min-width: 768px) {
+  main {
+    margin-left: 280px;
+    margin-right: 10px;
+  }
+  .header i {
+    visibility: hidden;
+  }
 }
 .footer {
   padding: 40px;
@@ -70,203 +387,4 @@ main {
 .footer span{
   font-family: 'Poppins';
   font-size: 11px;
-}
-.sidebar .nav-links{
-  height: 100%;
-  padding: 0px 0 150px 0;
-  overflow: auto;
-}
-.sidebar.close .nav-links{
-  overflow: visible;
-}
-.sidebar .nav-links::-webkit-scrollbar{
-  display: none;
-}
-.sidebar .nav-links li{
-  position: relative;
-  list-style: none;
-  transition: all 0.4s ease;
-}
-.sidebar .nav-links li:hover{
-  background: #1d1b31;
-}
-.sidebar .nav-links li .iocn-link{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.sidebar.close .nav-links li .iocn-link{
-  display: block
-}
-.sidebar .nav-links li i{
-  height: 50px;
-  min-width: 78px;
-  text-align: center;
-  line-height: 50px;
-  color: #fff;
-  font-size: 20px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.sidebar .nav-links li.showMenu i.arrow{
-  transform: rotate(-180deg);
-}
-.sidebar.close .nav-links i.arrow{
-  display: none;
-}
-.sidebar .nav-links li a{
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-}
-.sidebar .nav-links li a .link_name{
-  font-size: 18px;
-  font-weight: 400;
-  color: #fff;
-  transition: all 0.4s ease;
-}
-.sidebar.close .nav-links li a .link_name{
-  opacity: 0;
-  pointer-events: none;
-}
-.sidebar .nav-links li .sub-menu{
-  padding: 6px 6px 14px 80px;
-  margin-top: -10px;
-  background: #1d1b31;
-  display: none;
-}
-.sidebar .nav-links li.showMenu .sub-menu{
-  display: block;
-}
-.sidebar .nav-links li .sub-menu a{
-  color: #fff;
-  font-size: 15px;
-  padding: 5px 0;
-  white-space: nowrap;
-  opacity: 0.6;
-  transition: all 0.3s ease;
-}
-.sidebar .nav-links li .sub-menu a:hover{
-  opacity: 1;
-}
-.sidebar.close .nav-links li .sub-menu{
-  position: absolute;
-  left: 100%;
-  top: -10px;
-  margin-top: 0;
-  padding: 10px 20px;
-  border-radius: 0 6px 6px 0;
-  opacity: 0;
-  display: block;
-  pointer-events: none;
-  transition: 0s;
-}
-.sidebar.close .nav-links li:hover .sub-menu{
-  top: 0;
-  opacity: 1;
-  pointer-events: auto;
-  transition: all 0.4s ease;
-}
-.sidebar .nav-links li .sub-menu .link_name{
-  display: none;
-}
-.sidebar.close .nav-links li .sub-menu .link_name{
-  font-size: 18px;
-  opacity: 1;
-  display: block;
-}
-.sidebar .nav-links li .sub-menu.blank{
-  opacity: 1;
-  pointer-events: auto;
-  padding: 3px 20px 6px 16px;
-  opacity: 0;
-  pointer-events: none;
-}
-.sidebar .nav-links li:hover .sub-menu.blank{
-  top: 50%;
-  transform: translateY(-50%);
-}
-.sidebar .profile-details{
-  position: fixed;
-  bottom: 0;
-  width: 260px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #1d1b31;
-  padding: 12px 0;
-  transition: all 0.5s ease;
-}
-.sidebar.close .profile-details{
-  background: none;
-}
-.sidebar.close .profile-details{
-  width: 78px;
-}
-.sidebar .profile-details .profile-content{
-  display: flex;
-  align-items: center;
-}
-.sidebar .profile-details img{
-  height: 52px;
-  width: 52px;
-  object-fit: cover;
-  border-radius: 16px;
-  margin: 0 10px 0 12px;
-  background: #1d1b31;
-  transition: all 0.5s ease;
-}
-.sidebar.close .profile-details img{
-  padding: 10px;
-}
-.sidebar .profile-details .profile_name,
-.sidebar .profile-details .job{
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  white-space: nowrap;
-}
-.sidebar.close .profile-details i,
-.sidebar.close .logo img,
-.sidebar.close .profile-details .profile_name,
-.sidebar.close .profile-details .job{
-  display: none;
-}
-.sidebar .profile-details .job{
-  font-size: 13px;
-}
-.home-section{
-  position: relative;
-  background: #E4E9F7;
-  height: 100vh;
-  left: 260px;
-  width: calc(100% - 260px);
-  transition: all 0.5s ease;
-}
-.sidebar.close ~ .home-section{
-  left: 78px;
-  width: calc(100% - 78px);
-}
-.home-section .home-content{
-  height: 60px;
-  display: flex;
-  align-items: center;
-}
-.home-section .home-content .bx-menu,
-.home-section .home-content .text{
-  color: #11101d;
-  font-size: 35px;
-}
-.home-section .home-content .bx-menu{
-  margin: 0 15px;
-  cursor: pointer;
-}
-.home-section .home-content .text{
-  font-size: 26px;
-  font-weight: 600;
-}
-@media (max-width: 420px) {
-  .sidebar.close .nav-links li .sub-menu{
-    display: none;
-  }
 }
