--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -33,6 +33,10 @@
   padding-top: 60px; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
   }
+  .pro-sidebar img {
+    padding-left: 24px;
+    width: 100px;
+  }
   .pro-sidebar > .pro-sidebar-inner {
     background: #1d1d1d;
     height: 100%;
@@ -346,6 +350,7 @@ main {
   z-index: -1;   
 }
 .header{
+  display: inline;
   padding: 15px 16px;
   background: #1d1d1d;
   z-index: 1;
@@ -355,6 +360,7 @@ main {
   font-size: 35px;
   cursor: pointer;
 }
+
 @media (max-width: 767px) {
   main {
     margin-left: 30px;
