--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -31,7 +31,7 @@
   background-color: #1d1d1d; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  transition: all 300ms ease-in-out; /* 0.5 second transition effect to slide in the sidenav */
   }
   .pro-sidebar img {
     margin-top: 24px;
@@ -83,8 +83,8 @@
     background-color: rgba(0, 0, 0, 0.3);
     display: none; }
   .pro-sidebar.collapsed {
-    width: 280px;
-    min-width: 280px; }
+    width: 0;
+    min-width: 0; }
 .pro-sidebar .pro-menu.submenu-bullets .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item:before {
   content: '';
   display: inline-block;
@@ -384,12 +384,9 @@ main {
   .pro-sidebar {
     z-index: 10000;
   }
-  .header {
-    display: none;
-  }
-  .header i {
-    visibility: hidden;
-  }
+  .pro-sidebar.collapsed {
+    width: 280px;
+    min-width: 280px; }
 }
 .footer {
   padding: 40px;
