--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -23,12 +23,11 @@
 }
 .pro-sidebar {
   height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  background-color: #1d1d1d; /* Black*/
+  background-color: #000; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 60px; /* Place content 60px from the top */
   transition: all 300ms ease-in-out; /* 0.5 second transition effect to slide in the sidenav */
@@ -39,7 +38,7 @@
     width: 100px;
   }
   .pro-sidebar > .pro-sidebar-inner {
-    background: #1d1d1d;
+    background: #000;
     height: 100%;
     position: relative;
     }
@@ -206,97 +205,7 @@
     border-radius: 4px; }
   .pro-sidebar .pro-menu.circle .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
     border-radius: 50%; }
-
-.pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item {
-  position: relative; }
-  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item > .pro-inner-item > .suffix-wrapper,
-  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item > .pro-inner-item > .prefix-wrapper {
-    opacity: 0; }
-  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item > .pro-inner-list-item {
-    background-color: #2b2b2b;
-    z-index: 111; }
-  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item::before {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    cursor: pointer; }
-  .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu {
-    position: relative; }
-    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-item {
-      pointer-events: none; }
-      .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper {
-        display: none; }
-    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item {
-      height: auto !important;
-      position: fixed;
-      visibility: hidden;
-      min-width: 270px;
-      max-width: 270px;
-      background-color: transparent;
-      max-height: 100%;
-      padding-left: 3px; }
-      .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item.has-arrow {
-        padding-left: 10px; }
-      .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item > .popper-inner {
-        max-height: 100vh;
-        overflow-y: auto;
-        background-color: #2b2b2b;
-        padding-left: 20px;
-        border-radius: 4px; }
-    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu:hover > .pro-inner-list-item {
-      transition: visibility, transform 0.3s;
-      visibility: visible; }
-    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu:hover .pro-icon-wrapper .pro-icon {
-      animation: swing ease-in-out 0.5s 1 alternate; }
-    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-sub-menu-item,
-    .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
-      padding: 8px 30px 8px 5px; }
-
-.pro-sidebar.rtl .pro-menu .pro-menu-item .prefix-wrapper {
-  margin-right: 0;
-  margin-left: 5px; }
-
-.pro-sidebar.rtl .pro-menu .pro-menu-item > .pro-inner-item {
-  padding: 8px 20px 8px 35px; }
-  .pro-sidebar.rtl .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
-    margin-right: 0;
-    margin-left: 10px; }
-
-.pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper {
-  right: auto;
-  left: 20px; }
-  .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
-    transform: rotate(135deg); }
-
-.pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu.open > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
-  transform: rotate(45deg); }
-
-.pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item {
-  padding-left: 0;
-  padding-right: 0px; }
-  .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
-    padding: 8px 15px 8px 30px; }
-    .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item:before {
-      margin-right: 0;
-      margin-left: 15px; }
-
-.pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item {
-  padding-left: 0;
-  padding-right: 3px; }
-  .pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item.has-arrow {
-    padding-right: 10px; }
-  .pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item > .popper-inner {
-    padding-left: 0;
-    padding-right: 20px; }
-
-.pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-sub-menu-item,
-.pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
-  padding: 8px 5px 8px 30px; }
-
+    
 .popper-arrow {
   position: absolute;
   z-index: -1;
@@ -326,7 +235,7 @@
   display: none; }
 
 main {
-  margin-top: 30px;
+  margin: 30px 30px 30px 30px;
   display: block;
   flex: 1 0 auto;
 }
@@ -354,7 +263,7 @@ main {
 .header{
   display: inline;
   padding: 15px 16px;
-  background: #1d1d1d;
+  background: #000;
   z-index: 1;
 }
 .header i {
@@ -364,20 +273,12 @@ main {
 }
 
 @media (max-width: 767px) {
-  main {
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 15px;
-  }
-  .header i {
-    margin-left: auto;
+  .pro-sidebar {
+    width: 0px;
+    min-width: 0px;
   }
 }
 @media (min-width: 768px) {
-  main {
-    margin-left: 300px;
-    margin-right: 30px;
-  }
   .pro-sidebar {
     width: 270px;
     min-width: 270px;
