CRUD Tareas completo

--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -250,9 +250,9 @@ main {
 }
 .fondo::after {
   content: "";
-  background: url('https://exelium.eu/wp-content/uploads/2020/07/lwl-4393369-scaled.jpg') no-repeat center center fixed;
+  /* background: url('https://exelium.eu/wp-content/uploads/2020/07/lwl-4393369-scaled.jpg') no-repeat center center fixed; */
   /* background: url('C:\Users\super\Desktop\Proyectos\telesistemacanal4\client\src\views\images\fondo.jpg') no-repeat center center fixed; */
-  /* background: url('D:\Proyectos de React\telesistemasrl\client\src\views\images\fondo.jpg') no-repeat center center fixed; */
+  background: url('D:\Proyectos de React\telesistemasrl\client\src\views\images\fondo.jpg') no-repeat center center fixed;
   top: 0;
   left: 0;
   bottom: 0;
@@ -272,18 +272,6 @@ main {
   cursor: pointer;
 }
 
-@media (max-width: 767px) {
-  .pro-sidebar {
-    width: 0px;
-    min-width: 0px;
-  }
-}
-@media (min-width: 768px) {
-  .pro-sidebar {
-    width: 270px;
-    min-width: 270px;
-  }
-}
 .footer {
   padding: 40px;
   height: 20px;
