--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -27,7 +27,7 @@
   z-index: 2; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  background-color: #000; /* Black*/
+  background-color: #2b2b2b; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 60px; /* Place content 60px from the top */
   transition: all 300ms ease-in-out; /* 0.5 second transition effect to slide in the sidenav */
@@ -38,7 +38,7 @@
     width: 100px;
   }
   .pro-sidebar > .pro-sidebar-inner {
-    background: #000;
+    background: #2b2b2b;
     height: 100%;
     position: relative;
     }
@@ -264,7 +264,7 @@ main {
   z-index: 2;
   display: inline;
   padding: 15px 16px;
-  background: #000;
+  background: #2b2b2b;
 }
 .header i {
   color: #f1f1f7;
@@ -275,8 +275,9 @@ main {
 .footer {
   padding: 40px;
   height: 20px;
-  color: #11101d;
+  background-color: #2b2b2b;
   text-align: right;
+  color: #e2e2e2
 }
 .footer span{
   font-family: 'Poppins';
