--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -24,18 +24,16 @@
 .pro-sidebar {
   height: 100%; /* 100% Full-height */
   position: fixed; /* Stay in place */
-  z-index: 2; /* Stay on top */
+  z-index: 10000; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
   background-color: #2b2b2b; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
   transition: all 300ms ease-in-out; /* 0.5 second transition effect to slide in the sidenav */
   }
   .pro-sidebar img {
-    margin-top: 24px;
     padding-left: 24px;
-    width: 100px;
+    width: 250px;
   }
   .pro-sidebar > .pro-sidebar-inner {
     background: #2b2b2b;
@@ -263,17 +261,18 @@ main {
 .header{
   z-index: 2;
   display: inline;
-  padding: 15px 16px;
+  padding: 8px 16px;
   background: #2b2b2b;
 }
 .header i {
   color: #f1f1f7;
   font-size: 35px;
   cursor: pointer;
+  display: block;
 }
 
 .footer {
-  padding: 40px;
+  padding: 30px;
   height: 20px;
   background-color: #2b2b2b;
   text-align: right;
@@ -281,5 +280,5 @@ main {
 }
 .footer span{
   font-family: 'Poppins';
-  font-size: 11px;
+  font-size: 10px;
 }
