--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -27,13 +27,14 @@
   z-index: 10000; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
+  color: rgb(231, 229, 229);
   background-color: #2b2b2b; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
   transition: all 300ms ease-in-out; /* 0.5 second transition effect to slide in the sidenav */
   }
   .pro-sidebar img {
     padding-left: 24px;
-    width: 250px;
+    width: 200px;
   }
   .pro-sidebar > .pro-sidebar-inner {
     background: #2b2b2b;
@@ -103,14 +104,19 @@
   padding-top: 10px;
   padding-bottom: 10px; }
   .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item {
-    position: relative;
-    background-color: #2b2b2b; }
+    position: relative; }
     .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul {
       padding-top: 15px;
       padding-bottom: 15px; }
   .pro-sidebar .pro-menu a {
     text-decoration: none;
     color: #adadad; }
+    .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover {
+      background-color: teal
+    }
+    .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul >li :hover{
+      background-color: teal
+    }
     .pro-sidebar .pro-menu a:before {
       content: '';
       position: absolute;
