--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -110,12 +110,12 @@
       padding-bottom: 15px; }
   .pro-sidebar .pro-menu a {
     text-decoration: none;
-    color: #adadad; }
+    color: #fff; }
     .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover {
-      background-color: teal
+      background-color: #e3ac4d
     }
     .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul >li :hover{
-      background-color: teal
+      background-color: #e3ac4d
     }
     .pro-sidebar .pro-menu a:before {
       content: '';
@@ -126,11 +126,11 @@
       left: 0;
       background-color: transparent; }
     .pro-sidebar .pro-menu a:hover {
-      color: #d8d8d8; }
+      color: #fff; }
   .pro-sidebar .pro-menu .pro-menu-item {
     font-size: 14px; }
     .pro-sidebar .pro-menu .pro-menu-item.active {
-      color: #d8d8d8; }
+      color: #fff; }
     .pro-sidebar .pro-menu .pro-menu-item .suffix-wrapper {
       opacity: 1;
       transition: opacity 0.2s; }
@@ -147,7 +147,7 @@
       cursor: pointer; }
       .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:focus {
         outline: none;
-        color: #d8d8d8; }
+        color: #fff; }
       .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
         margin-right: 10px;
         font-size: 14px;
@@ -166,7 +166,7 @@
         flex-grow: 1;
         flex-shrink: 1; }
       .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover {
-        color: #d8d8d8; }
+        color: #fff; }
         .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover .pro-icon-wrapper .pro-icon {
           animation: swing ease-in-out 0.5s 1 alternate; }
     .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item:before {
