--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -128,7 +128,9 @@
     .pro-sidebar .pro-menu a:hover {
       color: #fff; }
   .pro-sidebar .pro-menu .pro-menu-item {
-    font-size: 14px; }
+    font-size: 16px;
+    font-weight: 300;
+   }
     .pro-sidebar .pro-menu .pro-menu-item.active {
       color: #fff; }
     .pro-sidebar .pro-menu .pro-menu-item .suffix-wrapper {
@@ -170,7 +172,7 @@
         .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover .pro-icon-wrapper .pro-icon {
           animation: swing ease-in-out 0.5s 1 alternate; }
     .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item:before {
-      background: #adadad; }
+      background: #fff; }
     .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper {
       position: absolute;
       right: 20px;
@@ -179,7 +181,7 @@
       .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
         display: inline-block;
         border-style: solid;
-        border-color: #adadad;
+        border-color: #fff;
         border-width: 0 2px 2px 0;
         padding: 2.5px;
         vertical-align: middle;
