--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -21,7 +21,11 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+.react-tabs__tab {
+  font-size: 14px !important;
+}
 .react-tabs__tab--selected {
+  background-color: #e2e2e2 !important;
   border: none !important;
   border-bottom: 4px solid #e3ac4d !important;
   color: #000 !important;
