--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -21,6 +21,17 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+.error-401 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: 2;
+}
+.error-401 h1{
+  font-size: 64px;
+}
 .react-tabs__tab {
   font-size: 14px !important;
 }
