--- a/client/src/views/components/design/layout/styles/styles.css
+++ b/client/src/views/components/design/layout/styles/styles.css
@@ -273,7 +273,7 @@ main {
   flex-direction: column;
   min-height: 100vh;
 }
-.fondo, .fondo401 {
+.fondo {
   width: 100%;
   height: 100%;
 }
@@ -281,7 +281,7 @@ main {
   content: "";
   /* background: url('https://exelium.eu/wp-content/uploads/2020/07/lwl-4393369-scaled.jpg') no-repeat center center fixed; */
   /* background: url('C:\Users\super\Desktop\Proyectos\telesistemacanal4\client\src\views\images\fondo.jpg') no-repeat center center fixed; */
-  background: url('D:\Proyectos web\telesistemacanal4\client\src\views\images\fondo.jpg') no-repeat center center fixed;
+  background: url('https://exelium.eu/wp-content/uploads/2020/07/lwl-4393369-scaled.jpg') no-repeat center center fixed;
   top: 0;
   left: 0;
   bottom: 0;
@@ -289,17 +289,6 @@ main {
   position: absolute;
   z-index: -1;   
 }
-/* .fondo401::after {
-  width: 50%;
-  content: "";
-  filter: blur(3px);
-  background: url('D:\Proyectos de React\telesistemacanal4\client\src\views\images\security.png') center;
-  top: 0;
-  left: 50%;
-  bottom: 0;
-  position: absolute;
-  z-index: -1;   
-} */
 
 .header{
   z-index: 2;
